--- a/data_processing.tex
+++ b/data_processing.tex
@@ -5,7 +5,7 @@
 
 
 %\documentclass{beamer}
-\documentclass[xcolor=table,10pt,handout]{beamer}
+\documentclass[xcolor=table,10pt]{beamer}
 \usepackage{latexsym,amssymb,amsfonts,amsmath}
 \usepackage{graphicx}
 \usepackage{caption}
@@ -78,6 +78,8 @@
    \addtolength\leftmargin{\labelsep}}}
   {\end{list}}
 
+% cite source for content in the frame in bottom right corner
+% usage: \source{here my source}
 \usepackage[absolute,overlay]{textpos}
 \setbeamercolor{framesource}{fg=gray}
 \setbeamerfont{framesource}{size=\scriptsize}
@@ -144,280 +146,69 @@
 \definecolor{tg}{rgb}{0.35,0.35,0.35}
 
 
-% \begin{frame} 
-%   \titlepage
-% \end{frame}
 
-
-% \begin{frame} 
-%   \frametitle{Outline}
-%   \tableofcontents[pausesections]
-% \end{frame}
-
-% %%%%%%%%%%%%% What are they? %%%%%%%%%%% 
-
-% \section{Introduction}
-% \begin{frame}
-% \frametitle{Where do they fit?}
-% \begin{columns}
-% \column{2.0in}
-% \begin{itemize}
-% \item Data has to be read/written from/to files before/after processing    
-% \item Raw data needs some pre-processing.  
-% \item Batch files are meta scripts that automate these tasks  
-% \end{itemize}
-% \column{2.0in}
-% \begin{figure}
-%     \centering
-%     \includegraphics[width=2.0in]{Fits.eps}
-% \end{figure}
-% \end{columns}
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-% \section{Load/Save data}
-
-% \begin{frame}[fragile]
-
-%   \frametitle{File operations: Reading}
-
-%   Opening an existing file 
-
-%   \begin{minted}{python}
-%     >>> f = open("test.txt","rb")
-%     >>> print f
-%     <open file 'test.txt', mode 'rb' at 0x...>
-%   \end{minted}
-%   \bigskip
-%   \pause
-%   Reading it:
-%   \begin{minted}{python}
-%     >>> f.read()
-%     'hello world'
-%   \end{minted}
-%   \pause
-%   \bigskip
-%   Closing it:
-%   \begin{minted}{python}
-%     >>> f.close()
-%     >>> print f
-%     <closed file 'test.txt', mode 'rb' at 0x...>
-%   \end{minted}
-
-% \end{frame}
-
-
-% \begin{frame}[fragile]
-
-%   \frametitle{File operations: Writing}
-
-%   Opening a (new) file 
-
-%   \begin{minted}{python}
-%     >>> f = open("new_test.txt","wb")
-%     >>> print f
-%     <open file 'test.txt', mode 'wb' at 0x...>
-%   \end{minted}
-%   \bigskip
-%   \pause
-%   Writing to it:
-%   \begin{minted}{python}
-%     >>> f.write("hello world, again")
-%     >>> f.write("... and again")
-%     >>> f.close()
-%   \end{minted}
-%   \pause
-%   \vspace{0.65cm}
-
-%   \begin{arrowlist}
-%   \item Only after calling close() the changes appear in the file for
-%     editing elsewhere!
-%   \end{arrowlist}
-
-% \end{frame}
-
-% \begin{frame}[fragile]{File operations: Appending}
-
-%   Opening an existing file 
-
-%   \begin{minted}{python}
-%     >>> f = open("test.txt","ab")
-%     >>> print f
-%     <open file 'test.txt', mode 'ab' at 0x...>
-%   \end{minted}
-%   \bigskip
-%   \pause  
-
-%   Appending to it:
-%   \begin{minted}{python}
-%     >>> f.write("hello world, again")
-%     >>> f.write("... and again")
-%     >>> f.close()
-%   \end{minted}
-%   \pause
-%   \vspace{0.8cm}
-
-%   \begin{arrowlist}
-%   \item In append mode, \textbf{file pointer} is set to the end of the opened file.
-%   \end{arrowlist}
-
-% \end{frame}
-
-
-% \begin{frame}[fragile]
-
-%   \frametitle{File operations: More about file pointers}
-
-%   \begin{mlinepython}
-%     f = open("lines_test.txt", "wb")
-%     for i in range(10):
-%         f.write("this is line %d \n" %(i+1))
-%     f.close()
-%   \end{mlinepython}
-%   \pause
-%   \bigskip
-
-%   Reading from the file:
-%   \smallskip
-
-%   \begin{minted}{python}
-%     >>> f = open("lines_test.txt", "rb")
-%     >>> f.readline()
-%   \end{minted}
-%   \pause
-%   \vspace{-10pt}
-%   \begin{minted}{python}
-%     'this is line 1 \n'
-%   \end{minted}
-%   \pause
-%   \vspace{-10pt}
-%   \begin{minted}{python}
-%     >>> f.readline()
-%   \end{minted}
-%   \pause
-%   \vspace{-10pt}
-%   \begin{minted}{python}
-%     'this is line 2 \n'
-%   \end{minted}
-%   \pause
-%   \vspace{-10pt}
-%   \begin{minted}{python}
-%     >>> f.read(14)
-%   \end{minted}
-%   \pause
-%   \vspace{-10pt}
-%   \begin{minted}{python}
-%     'this is line 3'
-%   \end{minted}
-%   \pause
-%   \vspace{-10pt}
-%   \begin{minted}{python}
-%     >>> f.read(2)
-%   \end{minted}
-%   \pause
-%   \vspace{-10pt}
-%   \begin{minted}{python}
-%     ' \n'
-%   \end{minted}
-
-% \end{frame}
 
 
 \begin{frame}[fragile]
-  \frametitle{File operations: More about file pointers}
-  Commands:
+  \frametitle{Saving Data: Python Pickle}
 
-  \begin{mydescription}{wbssssssss}
-    \itemsep14pt
-    \item[tell()] Opens a file for both writing and
-      reading. Overwrites the existing file if the file exists. If the file
-      does not exist, creates a new file for reading and writing.
-    \item[seek()] Opens a file for both reading and writing. The
-      file pointer will be at the beginning of the file.
-  \end{mydescription}
+  Use pickle to save and retrieve more complex data types - lists,
+  dictionaries and even class objects:
+
+  \bigskip\pause
+
+  \begin{mlinepython}
+    >>> import pickle 
+    >>> f = open('save_file.p', 'wb')
+    >>> ex_dict = {'hello': 'world'}
+    >>> pickle.dump(ex_dict, f)
+    >>> f.close()
+  \end{mlinepython}
+
+  \bigskip\pause
+
+  \begin{mlinepython}
+    >>> import pickle 
+    >>> f = open('save_file.p', 'rb')
+    >>> loadobj = pickle.load(f)
+    >>> print loadobj['hello']
+    world
+  \end{mlinepython}
 
 \end{frame}
 
 
-%
+\begin{frame}[fragile]
+  \frametitle{Best practice: With Statement}
 
-\begin{frame}[fragile]{File operations: Other Modes}
-  %\stretchy
 
-  \begin{mydescription}{wbssssssss}
-    \itemsep22pt
-    \item[wb+] Opens a file for both writing and
-      reading. Overwrites the existing file if the file exists. If the file
-      does not exist, creates a new file for reading and writing.
-    \item[rb+] Opens a file for both reading and writing. The
-      file pointer will be at the beginning of the file.
-    \item[ab+] Opens a file for both appending and reading in binary
-      format. The file pointer is at the end of the file if the file
-      exists. The file opens in the append mode. If the file does not exist,
-      it creates a new file for reading and writing.
-  \end{mydescription}
+  \begin{mlinepython}
+    import pickle 
 
-  \source{\url{tutorialspoint.com/python/python_files_io.htm}}
+    ex_dict = {'hello': 'world'}
+
+    with open('save_file.p', 'wb') as f:
+        pickle.dump(ex_dict, f)
+  \end{mlinepython}
+
+  \bigskip \pause
+  \vspace{0.2cm}
+
+  \begin{mlinepython}
+    import pickle 
+
+    with open('save_file.p', 'rb') as f:
+        loadobj = pickle.load(f)
+
+    print loadobj['hello']
+  \end{mlinepython}
+  \vspace{0.15cm}
+  \begin{arrowlist}
+  \item Use this!
+  \end{arrowlist}
+
 \end{frame}
 
-%   wb+ 
-
-%   rb+ 
-
-%   ab+ 
-% \end{frame}
-
-  % Some more text to try for styling this more text
-
-  % Note: The data read from the file should be casted to int/float for arithmetic operations
-
-  % \begin{mlinepython}
-  %   f = open("test.txt","r") # open test.txt in read mode
-  %   x = f.readline() # Read one line from the file. 
-  %   print x # This prints '21\\n'
-  %   y = int(x)*2 # Cast x into int and multiply by 2
-  %   f1 = open("test1.txt","w") # Open test1.txt in write mode
-  %   f1.write(str(y)) # Note f1.write(y) will give an error
-  %   f1.close()
-  %   f.close()
-  % \end{mlinepython}
-
-  % Alternatively,
-
-  % \begin{minted}{python}
-  %   f = open("test.txt","ra+") # open test.txt in read/append mode
-  %   x = f.read() # Read the whole file at once.
-  %   print x # This prints '42\\n'
-  %   y = int(x)*2 # Cast x into int and multiply by 2
-  %   f.write(str(y)) # Append the result to existing file 
-  %   f.close()
-  % \end{minted}
-
-  % Note: The data read from the file should be casted to int/float for arithmetic operations
-
-
-%%%%%%%%%%%%%%%%%%%%
-% \begin{frame}[fragile]
-% \frametitle{Pickle module}
-% \begin{itemize}
-% \item To save more complex data types - lists, dictonaries and even class objects.     
-% \item Can convert any python object to string (pickling) and back(unpickling)  
-% \item No cast required. 
-% \end{itemize}
-
-% \vspace{1mm}
-% \begin{minted}{python}
-% import pickle 
-% x = numpy.arange(0,1,0.1)
-% pickle.dump(x,open("example","w"))
-% #####################
-% getx = pickle.load(open("example","r"))\\
-% pylab.plot(getx) 
-% \end{minted}
-
-% \end{frame}
 
 % %%%%%%%%%%%%%%%%%%%%
 
