--- a/load_save_data.tex
+++ b/load_save_data.tex
@@ -1,3 +1,4 @@
+
 % \begin{frame} 
 %   \titlepage
 % \end{frame}
@@ -29,7 +30,6 @@
 % \end{frame}
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 
 \section{Load/Save data}
 
@@ -248,6 +248,77 @@
   \end{mydescription}
 
   \source{\url{tutorialspoint.com/python/python_files_io.htm}}
+\end{frame}
+
+
+\begin{frame}[fragile]
+  \frametitle{Saving Data: Python Pickle}
+
+  \onslide<1->
+  Use pickle to save and retrieve more complex data types - lists,
+  dictionaries and even class objects:
+
+  \bigskip\pause
+
+  \onslide<2>
+  \begin{figure}
+    \centering
+    \includegraphics[width=6cm]{pickle.jpg}
+    \caption*{\scriptsize  \textcopyright Dom Dada \href{http://creativecommons.org/licenses/by-nc-nd/2.0/}{CC BY-NC-ND 2.0}}
+  \end{figure}
+  
+  \vspace{-5.6cm}
+  \onslide<3->
+  \begin{mlinepython}
+    >>> import pickle 
+    >>> f = open('save_file.p', 'wb')
+    >>> ex_dict = {'hello': 'world'}
+    >>> pickle.dump(ex_dict, f)
+    >>> f.close()
+  \end{mlinepython}
+
+  \bigskip\onslide<4->
+
+  \begin{mlinepython}
+    >>> import pickle 
+    >>> f = open('save_file.p', 'rb')
+    >>> loadobj = pickle.load(f)
+    >>> print loadobj['hello']
+    world
+  \end{mlinepython}
+
+\end{frame}
+
+
+\begin{frame}[fragile]
+  \frametitle{Best practice: With Statement}
+
+
+  \begin{mlinepython}
+    import pickle 
+
+    ex_dict = {'hello': 'world'}
+
+    with open('save_file.p', 'wb') as f:
+        pickle.dump(ex_dict, f)
+  \end{mlinepython}
+
+  \bigskip \pause
+  \vspace{0.2cm}
+
+  \begin{mlinepython}
+    import pickle 
+
+    with open('save_file.p', 'rb') as f:
+        loadobj = pickle.load(f)
+
+    print loadobj['hello']
+  \end{mlinepython}
+  \vspace{0.15cm}
+  \begin{arrowlist}
+  \item Use this!
+  \end{arrowlist}
+
 \end{frame}
 
 
