--- a/data_processing.tex
+++ b/data_processing.tex
@@ -11,6 +11,7 @@
 \usepackage{caption}
 \usepackage{minted}
 \usepackage{hyperref}
+\usepackage{changepage} % for adjust width
 
 %for Introduction - Part 1 - ... Orientation
 %\useoutertheme[subsection=false, shadow]{miniframes} 
@@ -67,7 +68,21 @@
 \usepackage[english]{babel}
 \usepackage[latin1]{inputenc}
 
+\usepackage{xcolor}
 
+\usepackage[normalem]{ulem}
+\hypersetup{%
+  colorlinks=true,% hyperlinks will be coloured
+  urlcolor=blue,
+}
+\makeatletter
+\DeclareUrlCommand\ULurl@@{%
+  \def\UrlFont{\ttfamily\color{blue}}%
+  \def\UrlLeft{\uline\bgroup}%
+  \def\UrlRight{\egroup}}
+\def\ULurl@#1{\hyper@linkurl{\ULurl@@{#1}}{#1}}
+\DeclareRobustCommand*\ULurl{\hyper@normalise\ULurl@}
+\makeatother
 
 
 \newenvironment{mydescription}[1]                                               
@@ -154,203 +169,25 @@
 
 
 
-% %%%%%%%%%%%%%%%%%%%%
-\begin{frame}[fragile]
-  \frametitle{Regular expressions - A case study}
-  Formatting street names
-  \vspace{0.4cm}
-  \begin{minted}{python}
-    >>> s = '100 NORTH MAIN ROAD'
-  \end{minted}
-  \pause
-  \vspace{-10pt}
-  \begin{minted}{python} 
-    >>> s.replace('ROAD', 'RD.')
-  \end{minted}
-  \pause
-  \vspace{-10pt}
-  \begin{minted}{python} 
-    '100 NORTH MAIN RD.'
-  \end{minted}
-  \pause
-  \vspace{-10pt}
-  \begin{minted}{python} 
-    >>> s = '100 NORTH BROAD ROAD'
-  \end{minted}
-  \pause
-  \vspace{-10pt}
-  \begin{minted}{python}
-    >>> s.replace('ROAD', 'RD.') 
-  \end{minted}
-  \pause
-  \vspace{-10pt}
-  \begin{minted}{python}
-    '100 NORTH BRD. RD.'
-  \end{minted}
-  \pause
-  \vspace{-10pt}
-  \begin{minted}{python} 
-    >>> s[:-4] + s[-4:].replace('ROAD', 'RD.') 
-    '100 NORTH BROAD RD.'
-  \end{minted}
 
-  \vspace{0.3cm}
-  Better use regular expressions!
 
-  \begin{minted}{python}
-    >>> import re 
-    >>> re.sub(r'ROAD$', 'RD.', s) 
-    '100 NORTH BROAD RD.'
-  \end{minted}
 
-  \source{example from Dive Into Python 3 \\ \textcopyright Mark Pilgrim 
-    \href{http://creativecommons.org/licenses/by-sa/3.0/}{CC BY-SA 3.0}}
-
-\end{frame}
+% search (start, end etc. https://docs.python.org/3/howto/regex.html)
+% , findall, finditer, groups, split, sub
 
 
 
 
 
-\begin{frame}
-\begin{itemize}
-\item Main challenge is to come up with a pattern using regex literals, that match the requirements of parsing.
-\item Regex literals
-	\begin{itemize}
-		\item \^ - Matches beginning of line/pattern
-		\item \$ - Matches end of line/pattern
-		\item . - Matches any character except newline
-		\item {[}..{]} - Matches any single character in brackets
-		\item {[}\^..{]}- Matches any single character not in brackets
-		\item re* - Matches 0 or more occurrences of the preceding expression
-		\item re+ - Matches 1 or more occurrences of the preceding expression
-		\item re? - Matches 0 or 1 occurrence
-		\item re\{n\} - Match exactly n occurrences
-		\item re\{n,\} - Match n or more occurrences
-		\item re\{n,m\} - Match at least n and at most m
-   	\end{itemize}
-\end{itemize}
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%
-\begin{frame}[fragile]
-\frametitle{Regex - re.search()}
-\begin{itemize}
-\item Suppose the pattern to match is "python"
-\item regex module in python is "re"
-\item re.search(pattern, string, flags=0) $\rightarrow$ matches the pattern in string\\
-
-\begin{minted}{python}
-import re
-data = "I like python"
-ans = re.search(r'python',data)
-ans.group() # returns the entire match
-Out[20]: 'python'
-\end{minted}
-\small
-\item Suppose the pattern to match is "python" or "Python"\\
-
-\begin{minted}{python}
-data = "Python is a programming language. I like python"
-ans = re.search(r'[pP]ython',data)
-ans.group()
-Out[38]: 'Python'
-\end{minted}
-\small
-\item Though the regex is correct, re.search() returns as soon as it finds one instance.{[} re.findall() {]}
-\item re.match((pattern, string, flags=0), same as search() but only at start of the string 
-\end{itemize}
-\end{frame}
 
 
 
-%%%%%%%%%%%%%%%%%%%%
-\begin{frame}[fragile]
-\frametitle{Regex - re.findall()}
-\begin{itemize}
-\item re.findall(pattern, string, flags=0) $\rightarrow$ returns a list of all occurences of pattern\\
-
-\begin{minted}{python}
-data = "Python is a programming language. I like python"
-ans = re.findall(r'[pP]ython',data)
-print ans
-['Python', 'python']
-\end{minted}
-\small
-\item Suppose the aim is to extract all numbers from a data stream
-
-\begin{minted}{python}
-data = "There are 7 students and 2 tutors"\\
-ans = re.findall(r'[0-9]+',data)\\
-print ans
-['7', '2']
-\end{minted}
-\small
-(Note these are strings and need to be cast into integers for arthimetic operation)\\
-\end{itemize}
-\end{frame}
 
 
 
-%%%%%%%%%%%%%%%%%%%%
-\begin{frame}[fragile]
-\frametitle{Regex - More examples}
-\begin{itemize}
-\item Suppose the aim is to extract strings not numbers
 
-\begin{minted}{python}
-data = "There are 7 students and 2 tutors"
-ans = re.findall(r'[^ 0-9]+',data)
-print ans
-['There are ', ' students and ', ' tutors']
-\end{minted}
-\small
-\item Multiple regular expressions can be used to perform the job. For eg,\\
 
-\begin{minted}{python}
-ans = re.findall(r'[a-zA-Z]+',data)
-print ans
-['There', 'are', 'students', 'and', 'tutors']
-\end{minted}
-\small
-\item However slight difference. 
-\end{itemize}
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%
-\begin{frame}[fragile]
-\frametitle{Regex -  re.split()}
-\begin{itemize}
-\item Suppose the data stream has well-defined delimiter.\\
-
-\begin{minted}{python}
-data = "x = 20"
-ans = re.split(r'=',data)
-print ans
-['x', '20']
-\end{minted}
-\vspace{1mm}
-\begin{minted}{python} 
-data = 'ftp://python.about.com'
-ans = re.split(':/{1,3}', data)
-print ans
-['ftp', 'python.about.com']
-\end{minted}
-\small
-\item Searching for regex literals as strings. Escape the meaning by a preceding backslash $\backslash$
-
-\begin{minted}{python}
-data = '25.657' # Split into whole and fractional parts
-ans = re.split(r'\.',data)
-print ans
-['25', '657']
-\end{minted}
-\end{itemize}
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%
-\begin{frame}[fragile]
-\frametitle{Regex -  re.sub()}
+\begin{frame}[fragile]{re.sub()}
 \begin{itemize}
 \item Most powerful of them all.
 \item re.sub(pattern, repl, string, max=0) looks for a pattern and replaces with repl
@@ -373,22 +210,6 @@ print ans1
 \end{itemize}
 \end{frame}
 
-%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Regex - Some shortcuts}
-\begin{itemize}
-\item $\backslash$w - Matches word character 
-\item $\backslash$W - Matches non-word character
-\item $\backslash$s - Matches whitespace (Equivalent to $\backslash$t$\backslash$n$\backslash$r," ")
-\item $\backslash$S - Matches non-whitespace.
-\item $\backslash$d - Matches digits (Equivalent to {[}0-9{]} )
-\item $\backslash$D - Matches non digits
-\item $\backslash$A - Matches beginning of the string
-\item $\backslash$Z - Matches end of the string
-\item $\backslash$B - Matches nonword boundaries
-\item $\backslash$n,$\backslash$t - Matches newline, tab resp
-\end{itemize}
-\end{frame}
 
 
 
@@ -409,7 +230,7 @@ print ans1
 % 	\item os.listdir() - List the contents of the directory\
 % 	\end{itemize}
 % \item batch file batch\_file.py to run your script exercise.py for all data files in a directory.\\
-% 
+
 % \begin{minted}{python}
 % from os import listdir
 % files = listdir(".")
