--- a/regex.tex
+++ b/regex.tex
@@ -6,7 +6,7 @@
   \begin{columns}[T]
     %
     \begin{column}{.4\textwidth}
-      Image that
+      Imagine that
       \vspace{0.5cm}
       \begin{arrowlist}
         \itemsep8pt
@@ -87,8 +87,189 @@
 
 \end{frame}
 
+\begin{frame}{Pattern matching with regular expressions}
+\begin{adjustwidth}{2.5em}{0pt}
+  \begin{mydescription}{wbbasdss}
+    \itemsep3pt
+    \item[\^]  Matches beginning of line/pattern
+    \item[\$]  Matches end of line/pattern
+    \item[. ]  Matches any character except newline
+    \item[{[}..{]}]   Matches any single character in brackets
+    \item[{[}\^..{]}]  Matches any single character not in brackets
+    \item[re*]  Matches 0 or more occurrences of the preceding expression
+    \item[re+]  Matches 1 or more occurrences of the preceding expression
+    \item[re?]   Matches 0 or 1 occurrence
+    \item[re\{n\}]  Match exactly n occurrences
+    \item[re\{n,\}]   Match n or more occurrences
+    \item[re\{n,m\}]   Match at least n and at most m
+  \end{mydescription}
+\end{adjustwidth}
+  \vspace{0.3cm}
+  \pause
+  \begin{arrowlist}
+    \item Use cheatsheets, trainers, tutorials, builders, etc..
+  \end{arrowlist}
+\end{frame}
 
 
+\begin{frame}[fragile]{re.search() \& matches}
+
+  \begin{minted}{python}
+    >>> import re
+    >>> data = "I like python"
+    >>> m = re.search(r'python',data)
+  \end{minted}
+  \pause
+  \vspace{-10pt}
+  \begin{minted}{python}
+    >>> print m
+    <_sre.SRE_Match object at 0x...>
+  \end{minted}
+  \pause
+  \vspace{0.7cm}
+  Important properties of the match object:
+  
+  \begin{adjustwidth}{0.6cm}{0pt}
+    \medskip
+    \begin{mydescription}{wbasssss}
+      \itemsep6pt
+      \item[group()] Return the string matched by the RE
+      \item[start()] Return the starting position of the match
+      \item[end()] Return the ending position of the match
+      \item[span()] Return a tuple containing the (start, end) positions of the match
+    \end{mydescription}
+  \end{adjustwidth}
+  
+\end{frame}
+
+
+\begin{frame}[fragile]{re.search() \& matches}
+
+  For example:
+
+  \bigskip
+
+  \begin{minted}{python}
+    >>> import re
+    >>> data = "I like python"
+    >>> m = re.search(r'python',data)
+  \end{minted}
+  \pause
+  \vspace{-10pt}
+  \begin{minted}{python}
+    >>> m.group()
+    'python'
+  \end{minted}
+  \pause
+  \vspace{-10pt}
+  \begin{minted}{python}  
+    >>> m.start()
+    7
+  \end{minted}
+  \pause
+  \vspace{-10pt}
+  \begin{minted}{python} 
+    >>> m.span()
+    (7,13)
+  \end{minted}
+
+  \bigskip
+
+  For a complete list of match object properties see for example the
+  Python Documentation:
+
+  \smallskip  
+
+  \small \ULurl{https://docs.python.org/2/library/re.html#match-objects}
+
+\end{frame}
+
+
+\begin{frame}[fragile]{re.findall()}
+
+  \begin{minted}{python}
+    >>> import re
+    >>> data = "Python is great. I like python"
+    >>> m = re.search(r'[pP]ython',data)
+  \end{minted}
+  \pause
+  \vspace{-10pt}
+  \begin{minted}{python} 
+    >>> m.group()
+    'Python'
+  \end{minted}
+
+  \bigskip
+  \pause
+  \begin{arrowlist}
+    \item  \textbf{re.search()} returns only the first match, use
+      \textbf{re.findall()} instead:
+  \end{arrowlist}
+  \bigskip
+  \pause
+
+  \begin{minted}{python}
+    >>> import re
+    >>> data = "Python is great. I like python"
+    >>> l = re.findall(r'[pP]ython',data)
+  \end{minted}
+  \pause
+  \vspace{-10pt}
+  \begin{minted}{python} 
+    >>> print l
+    ['Python', 'python']
+  \end{minted}
+
+  \bigskip
+  \pause
+  \begin{arrowlist}
+    \item  Returns list instead of match object!
+  \end{arrowlist}
+
+
+\end{frame}
+
+
+\begin{frame}[fragile]{re.findall() - Example}
+
+  \begin{mlinepython}
+    import re
+
+    with open("history.txt", "rb") as f:
+        text = f.read()
+
+    year_dates = re.findall(r'19[0-9]{2}', text)
+  \end{mlinepython}
+ 
+\end{frame}
+
+\begin{frame}[fragile]{re.split()}
+
+  Suppose the data stream has well-defined delimiter
+
+  \vspace{0.4cm}
+  \begin{minted}{python}
+    >>> data = "x = 20"
+    >>> re.split(r'=',data)
+    ['x ', ' 20']
+  \end{minted}
+  \vspace{0.2cm}
+  \pause
+  \begin{minted}{python} 
+    >>> data = 'ftp://python.about.com'
+    >>> re.split(r':/{1,3}', data)
+    ['ftp', 'python.about.com']
+  \end{minted}
+  \vspace{0.2cm}
+  \pause
+  \begin{minted}{python}
+    >>> data = '25.657'
+    >>> re.split(r'\.',data)
+    ['25', '657']
+  \end{minted}
+
+
+\end{frame}
 
 %%% Local Variables: 
 %%% mode: latex
