--- a/data_processing.tex
+++ b/data_processing.tex
@@ -1,12 +1,18 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Felix Hoffmann, October 2014
-% adapted from Jyotika Bahuguna October 2012
+% about.me/felixhoffmann
 %
-% 
+% based on prior presentation of
+% Jyotika Bahuguna, October 2012
+%
+% You can freely use this code 
+% respecting the licenses that 
+% apply to the images and content 
+% used in this document as well as
+% LaTeX itself.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-%\documentclass{beamer}
 \documentclass[xcolor=table,10pt,handout]{beamer}
 \usepackage{latexsym,amssymb,amsfonts,amsmath}
 \usepackage{graphicx}
