latest for slideshare upload

--- a/data_processing.tex
+++ b/data_processing.tex
@@ -13,7 +13,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\documentclass[xcolor=table,10pt,handout]{beamer}
+\documentclass[xcolor=table,10pt]{beamer}
 \usepackage{latexsym,amssymb,amsfonts,amsmath}
 \usepackage{graphicx}
 \usepackage{caption}
@@ -147,8 +147,8 @@
 \title {File operations and data parsing}
 %\subtitle{}
 
-\author[Felix Hoffmann]{Felix Hoffmann \vspace{0.25cm} \newline \small felix.hoffmann@jupiter.uni-freiburg.de} 
-\institute[BCF]{Bernstein Center Freiburg}
+\author[Felix Hoffmann]{Felix Hoffmann \vspace{0.25cm} \newline \small felix11h.dev@gmail.com} 
+\institute[]{}
 \date{\today}
 
 
