update cover, move to frames/

--- a/data_processing.tex
+++ b/data_processing.tex
@@ -169,37 +169,18 @@
 \definecolor{tg}{rgb}{0.35,0.35,0.35}
 
 
-\begin{frame} 
-  \titlepage
-\end{frame}
-
-\begin{frame}
-  \begin{center} 
-
-    \vspace{5.95cm}
-
-    \includegraphics[width=2.2cm]{by-nc-sa_eu.eps}
-
-    \vspace{0.25cm}
-
-    \small
-    This work is licensed under a
-    \href{http://creativecommons.org/licenses/by-nc-sa/4.0/}{Creative
-      Commons Attribution-NonCommercial-ShareAlike 4.0 International
-      License}.
-
-  \end{center}
-\end{frame}
-
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\input{load_save_data}
+\input{frames/front}
 
-\input{regex}
+\input{frames/load_save_data}
 
-\input{os_module}
+\input{frames/regex}
+
+\input{frames/os_module}
+
+\input{frames/back}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
